Firm analytics added